fix double scrollbar

--- a/forgettable-frontend/src/pages/PersonPage/PersonPage.module.css
+++ b/forgettable-frontend/src/pages/PersonPage/PersonPage.module.css
@@ -1,18 +1,18 @@
 .PersonPage {
     width: 100%;
-    height: 100vh;
+    height: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    overflow-x: none;
 }
 
 .ContentContainer {
     width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    overflow-x: none;
+    height: 90%;
     box-sizing: border-box;
     padding: 0 60px;
+    overflow-y: none;
 }
 
 .TitleContainer {
